--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,139 @@
-/* You can add global styles to this file, and also import other style files */
+
+  $blue: #5389c6;
+  $dark-blue: #2b4496;
+  $yellow: rgb(253, 218, 62);
+  $white: rgb(219, 234, 253);
+  $shadow-dark: rgba(10, 10, 41, 0.5);
+  $shadow-light: rgba(170, 207, 255, 0.2);
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  width: 100%;
+  height:100vh;
+  background-color: $blue;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 400px;
+  height: 80vh;
+  background-color: $dark-blue;
+  border-radius: 20px;
+  box-shadow: 10px 10px 25px $shadow-dark;
+}
+
+.upper-data {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.lower-data {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  border-bottom-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding: 1em;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.upper-data img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width:min-content;
+  height: 100%;
+}
+
+.weather-data {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.location {
+  color: $white;
+  text-align: center;
+  font-size: 1.2em;
+  text-shadow: 5px 5px 5px $shadow-dark;
+}
+.temperature {
+  color: $white;
+  text-align: center;
+  font-size: 4em;
+  font-weight: 900;
+  text-shadow: 5px 5px 5px $shadow-dark;
+}
+
+.more-info-label {
+  padding: 0.5em;
+  color: $white;
+  display:flex;
+  justify-content: center;
+}
+
+.more-info-container {
+  flex:1;
+  padding:0.5em;
+  background-color: $shadow-light;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.info-block {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.info-block-label{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-block-label img {
+  width: 1em;
+}
+
+.info-block-label span {
+  color: $white;
+  font-size: 0.8em;
+}
+
+.info-block-value {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: $white;
+}
