--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,65 @@
-<div class="container">
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/hot.jpg" *ngIf="weatherData.main.temp > 60">
+    <img src="../assets/cold.jpg" *ngIf="weatherData.main.temp <= 60">
+    <div class="weather-data">
+      <div class="location">{{weatherData.name}}</div>
+      <script>
+        
+      </script>
+      <div class="temperature">{{weatherData.main.temp | number: '1.0-0'}}F</div>
+    </div>
+  </div>
+  <div class="lower-data">
+    <div class="more-info-label">
+      More Information
+    </div>
 
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/min.png" alt="">
+          <span>min</span>
+        </div>
+      </div>
+      <div class="info-block-value">
+        {{weatherData.main.temp_min}}F
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/max.png" alt="">
+          <span>max</span>
+        </div>
+      </div>
+      <div class="info-block-value">
+        {{weatherData.main.temp_max}}F
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/humidity.png" alt="">
+          <span>humidity</span>
+        </div>
+      </div>
+      <div class="info-block-value">
+        {{weatherData.main.humidity}}%
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/wind.png" alt="">
+          <span>wind</span>
+        </div>
+      </div>
+      <div class="info-block-value">
+        {{weatherData.wind.speed}} mph
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container">
   <div class="upper-data">
     <img src="../assets/hot.jpg" *ngIf="14 > 15">
     <img src="../assets/cold.jpg" *ngIf="14 <= 15">
@@ -8,12 +68,11 @@
       <div class="temperature">{{ 17.54 | number: '1.0-0'}}°C</div>
     </div>
   </div>
-
   <div class="lower-data">
     <div class="more-info-label">
       More Information
     </div>
-    
+
     <div class="more-info-container">
       <div class="info-block">
         <div class="info-block-label">
@@ -55,7 +114,7 @@
         11 km/h
       </div>
     </div>
-
   </div>
+</div> -->
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
